Revert "LPS-93521 frontend-theme-styled - Prevent overlap of styles between AUI Modal and ClayModal"
This reverts commit cdc0424ecc21f47b367864d803484a9a9c731bb9.

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
@@ -13,33 +13,33 @@
 }
 
 .modal {
-	&.fade .modal-dialog {
-		position: static;
+	display: block;
+	margin: 0;
+	overflow: hidden;
+	position: fixed;
+}
 
-		&.modal-dialog-sm {
-			max-width: $modal-md;
-		}
-	}
+.modal-body {
+	overflow: auto;
 
-	&.yui3-widget-modal {
-		display: block;
-		margin: 0;
+	&.dialog-iframe-bd {
 		overflow: hidden;
-		position: fixed;
-
-		@include sm {
-			max-width: none;
-		}
-
-		.modal-body {
-			overflow: auto;
-
-			&.dialog-iframe-bd {
-				overflow: hidden;
-				padding: 0;
-			}
-		}
+		padding: 0;
 	}
+}
+
+.modal-dialog {
+	@include sm {
+		max-width: none;
+	}
+
+	&.modal-dialog-sm {
+		max-width: $modal-md;
+	}
+}
+
+.modal-hidden {
+	display: none;
 }
 
 .modal-open .modal {
